--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -11,13 +11,11 @@
   align-items: center;
   font-size: 1.5rem;
   font-family: 'Oxygen', sans-serif;
-
 }
 
 .navbar-main-div a:hover{
 border-bottom: 4px solid purple;
 }
-
 
 .nav-ul {
 list-style: none;
@@ -33,4 +31,47 @@ margin: 20px;
 .nav-link{
   color: antiquewhite;
   text-decoration: none;
+}
+.navMobile-main-div{
+  display: none;
+}
+
+@media (max-width: 990px) {
+  .nav-main-div{
+    display: none;
+  }
+
+  .navMobile-main-div{
+    display: flex;
+    background-color: red;
+    align-items: center;
+  }
+
+  .navMobile-main-div .hamburger{
+position: absolute;
+right:5%;
+cursor: pointer;
+
+  }
+
+.navbar-main-div nav ul{
+display:flex;
+flex-direction: column;
+position: absolute;
+top:80px;
+left:0;
+background-color:rgb(38, 0, 255);
+border-top: 2px solid #8C1CD1;
+
+  }
+  .navbar-main-div nav ul{
+    padding: 0 15px 0 15px;
+  }
+  .navbar-main-div{
+    opacity: 75%;
+  }
+
+  .navbar-main-div a:hover{
+    color: red;
+    }
 }
