--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html{
+  scroll-behavior: smooth;
+}
 h1{
   font-weight: 800;
   font-size: 45px;
