--- a/client/src/components/PageHeader/PageHeader.css
+++ b/client/src/components/PageHeader/PageHeader.css
@@ -3,7 +3,8 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  padding-bottom:2%;
+  padding-bottom:1%;
+  padding-top:70px;
 }
 
 .container hr{
