--- a/client/src/components/PageHeader/PageHeader.css
+++ b/client/src/components/PageHeader/PageHeader.css
@@ -13,3 +13,17 @@
   width: 125px;
   border: 1px solid #8c1cd1;
 }
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    .container{
+      padding-top: 55px;
+      padding-bottom: 0;
+    }
+.container h1{
+  font-size: 35px;
+padding-top: 0;
+}
+}
