--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,3 +38,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+ html, body{
+   width:100%;
+   margin:0;
+   padding:0;
+   overflow-x:hidden;
+ }
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    html, body{
+      width:100%;
+      margin:0;
+      padding:0;
+      overflow-x:hidden;
+    }
+}
