--- a/client/src/screens/Contact/Contact.css
+++ b/client/src/screens/Contact/Contact.css
@@ -5,16 +5,16 @@
 
 .contact-main-div hr{
   width:80vw;
-  box-shadow: 0 0 10px 2px white;
+box-shadow: 0 0 1vw .06vw white;
 }
 
 .contact-p{
   color: seashell;
-  width: 65vw;
+  width: 68vw;
   margin: 0 auto;
-margin-top: 60px;
-margin-bottom:60px;
-font-size:30px;
+margin-top:5vh;
+margin-bottom:1vh;
+font-size:calc(16px + 1.2vw);
 text-align:center;
 }
 
@@ -27,17 +27,41 @@ text-align:center;
 .about-me-contact{
   color:gainsboro;
   font-family: 'Oxygen', sans-serif;
-  font-size: 30px;
+  font-size: calc(16px + 1vw)
 }
 .about-me-contact a{
   font-family: 'Oxygen', sans-serif;
-  font-size: 30px;
+  font-size: calc(16px + 1vw);
   color:goldenrod;
 }
 .contact-icons{
   width:100%;
   display: flex;
   justify-content: center;
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .contact-main-div hr{
+      width:82vw;
+    box-shadow: 0 0 1vw .06vw white;
+    }
+    .contact-p{
+      width: 75vw;
+      font-size: 25px;
+      text-align: justify;
+      margin-bottom: 25px;
+    }
+
+    .about-me-contact a{
+   
+      font-size: 20px;
+      color:goldenrod;
+    }
+
+
 }
 
 
@@ -62,15 +86,49 @@ text-align:center;
       font-size: 20px;
       padding: 10px;
     }
+    .contact-row{
+    width: 90%;
+    }
+  
 
 }
 
 @media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+
+    .contact-main-div{
+      padding-bottom:100px;
+    }
     .about-me-contact{
-      font-size: 20px;
-     
+      font-size: 25px;
+      margin-left: 10px;
+      margin-top: -15px;
+    }
+    .contact-title{
+      font-size: 45px;
+      margin-top: -15px;
+      margin-bottom: -12px;
+    }
+    p.contact-p{
+      font-size: 19px;
+      text-align: justify;
+      padding: 10px;
+      margin:0 auto;
+      margin-bottom: 25px;
+      width:82%;
+    }
+    .contact-row{
+
+    margin:0 auto;
+    align-items: center;
+
+    }
+    .about-me-contact{
+margin:0;
+    
+    } .about-me-contact a{
+      font-size: 18px;
     }
 }
