--- a/client/src/screens/Skills/Skills.css
+++ b/client/src/screens/Skills/Skills.css
@@ -2,6 +2,7 @@
   background-color: #141313;
   padding-bottom: 5%;
 }
+
 .skills-main-div hr{
   width:80vw;
   box-shadow: 0 0 1vw .06vw white;
@@ -29,27 +30,22 @@ margin-bottom:2.75%;
 }
 .skills-container li{
 margin-right: 18px;
-font-size: 28px;
-
+font-size: calc(16px +.75vw)px;
 }
 
 
 .skills-lists{
   background-color: black;
   box-shadow: 0 0 1vw .03vw white;
-  /* width:85vw */
+  padding: 15px 0 15px 0;
 }
 .skill-img{
-  height:64px;
-  width: 64px;
-  padding:5px;
+  height:calc(64px + .75vw);
+  width: calc(64px + .75vw);
+  padding: 0.5%;;
 }
 
-.skill-img-ruby{
-  height:55px;
-  width: 55px;
 
-}
 .skill-img-air{
   height:64px;
   width: 64px;
@@ -63,3 +59,70 @@ font-size: 28px;
 text-decoration: underline blanchedalmond;
 margin-right: 2px;
  }
+
+ @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .skills-main-div{
+ height:80vh;
+    }
+
+    .skills-main-div hr{
+      width:84vw;
+      box-shadow: 0 0 1vw .06vw white;
+    }
+    .skills-text{
+      width:80vw;
+      text-align:justify;
+      margin-bottom: 8%;
+    }
+
+    .skills-p{
+      font-size: 25px;
+    }
+   .skills-ul{
+     margin:0 auto;
+     width: 90vw;
+     margin-left:50px
+   }
+
+   .skill-img{
+     height: 60px;
+     width:60px
+   }
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    .skills-main-div{
+      padding-bottom: 100px;;
+    }
+    .skills-main-div hr{
+      width:84vw;
+      box-shadow: 0 0 1vw .06vw white;
+ 
+    }
+    .skills-text{
+      width:82vw;
+      text-align:justify;
+      margin-bottom: 4%;
+    }
+    .skill-img{
+      height: 32px;
+      width:32px
+    }
+    .skills-container li{
+      /* margin-right: 6; */
+      font-size: 0;
+      }
+
+    ul.skills-ul {
+        margin:0 auto;
+        width: 90vw;
+   padding: 10px 0 10px 0;
+      }
+
+}
